--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
-    "prefix": ".",
-    "botid": "botidniz",
-    "token": "bot-tokeniniz",
+    "prefix": "!",
+    "botid": "1339892973143588956",
+    "token": "MTMzOTg5Mjk3MzE0MzU4ODk1Ng.GZui88.gGTUDmSvQDndpNHL3-SBry26n5BWFOseGnC5nc",
     "topgg": false,
 	"prefixinamaci": "prefix log kur komutu için kullanılıcaktır || bu satırı silebilirsiniz"
 }
